<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sagar.sicklab.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp" />

    <eu.long1.spacetablayout.SpaceTabLayout
        android:id="@+id/spaceTabLayout"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        app:button_color="@color/colorAccent"
        app:icon_one="@drawable/currently_reported"

        app:icon_three="@drawable/all_reports"
        app:icon_two="@drawable/prev_seen"
        app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"

        app:number_of_tabs="three"

        app:starting_position="one"
        app:tab_color="@color/colorPrimary"
        app:text_color="#61FFFFFF"

        app:text_one="@string/tab1"

        app:text_three="@string/tab3"
        app:text_two="@string/tab2" />

</RelativeLayout>
