<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUp"
    tools:context="com.example.sagar.sicklab.AddSuggestionsByDoctors">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/enter_suggest"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_alignEnd="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="5dp"
        android:gravity="top"

        android:hint="@string/hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:text="@string/submit" />
</RelativeLayout>
