<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUp"
    tools:context="com.example.sagar.sicklab.SignUP">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:paddingStart="5dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginStart="39dp"
        android:layout_marginTop="38dp"
        android:text="@string/enter_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="26dp"
        android:text="@string/what_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="5dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="19dp"

        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="250dp"

        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="12dp"
        android:gravity="center"

        android:text="@string/check"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:text="@string/sign_up" />


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignTop="@+id/textView10"

        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/create_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="19dp"

        android:background="@drawable/rounded_edittext"

        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="5dp" />

</RelativeLayout>
