<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signUp"
    tools:context="com.example.sagar.sicklab.MakeReports">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/make_report"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginStart="39dp"
            android:layout_marginTop="15dp"
            android:text="@string/enter_disease_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:inputType="textAutoComplete"
            android:paddingEnd="5dp"
            android:paddingStart="5dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText3"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAgeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"

            android:layout_marginTop="18dp"
            android:text="@string/desc"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEnterDocs"
            android:layout_width="270dp"
            android:layout_height="39dp"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="10dp"
            android:text="@string/enter_docs"

            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_alignTop="@+id/textViewEnterDocs"
            android:layout_toEndOf="@+id/textViewEnterDocs"
            android:paddingStart="10dp" />

        <Spinner
            android:id="@+id/editText2"
            android:layout_width="match_parent"

            android:layout_height="50dp"
            android:layout_alignStart="@+id/textViewEnterDocs"
            android:layout_below="@+id/textView11"
            android:textAlignment="center"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_spinner"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="40dp"
            android:entries="@array/spinner_gender"
            android:ems="10"

            android:inputType="number"
            android:paddingStart="5dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/textViewEnterDocs"
            android:layout_below="@+id/textViewAgeDesc"
            android:layout_marginTop="10dp"
            android:text="@string/gender_des"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textview10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/textViewEnterDocs"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="10dp"
            android:text="@string/age_des"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_alignStart="@+id/textViewEnterDocs"
            android:layout_below="@+id/textview10"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_spinner"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="40dp"
            android:ems="10"
            android:entries="@array/spinner_age"
            android:inputType="number"
            android:textAlignment="center" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textViewEnterDocs"
            android:layout_centerHorizontal="true"

            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:text="@string/report" />

        <!--<Button-->
        <!--android:id="@+id/button4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@+id/editText2"-->
        <!--android:layout_alignBottom="@+id/editText2"-->
        <!--android:layout_alignEnd="@+id/editText"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:background="@color/white"-->
        <!--android:text="@string/add_des"-->
        <!--android:textSize="12sp" />-->

    </RelativeLayout>

</ScrollView>
